--- a/src/Pages/Home/Styles/HomeAbout.scss
+++ b/src/Pages/Home/Styles/HomeAbout.scss
@@ -24,6 +24,6 @@ $green: #548c2f;
   letter-spacing: 0.2em;
   cursor: pointer;
   &:hover {
-    // color: yellow;
+    background-color: #104911;
   }
 }
