--- a/src/Pages/Home/Styles/HomeServices.scss
+++ b/src/Pages/Home/Styles/HomeServices.scss
@@ -28,5 +28,9 @@ $lgreen: #548c2f;
     color: white;
     font-size: 1rem;
     cursor: pointer;
+
+    &:hover {
+      background-color: #104911;
+    }
   }
 }
