--- a/src/Pages/Home/Styles/MisVis.scss
+++ b/src/Pages/Home/Styles/MisVis.scss
@@ -40,5 +40,9 @@ img {
     background-color: $lgreen;
     color: white;
     cursor: pointer;
+
+    &:hover {
+      background-color: #104911;
+    }
   }
 }
