--- a/src/Pages/JoinUs/Styles/Content.scss
+++ b/src/Pages/JoinUs/Styles/Content.scss
@@ -20,6 +20,10 @@
 
 .text {
   width: 60%;
+
+  p {
+    margin-top: 1rem;
+  }
 }
 
 .quote {
@@ -57,5 +61,8 @@
     color: white;
     font-size: 1.2rem;
     cursor: pointer;
+    &:hover {
+      background-color: #104911;
+    }
   }
 }
